--- a/CodingSchool/CSS/LearnWithLeon&Friends.css
+++ b/CodingSchool/CSS/LearnWithLeon&Friends.css
@@ -12,9 +12,8 @@
 /* Typography */
 
 h1 {
+    font-weight: 600;
     color: #ffffff;
-    font-size: 30px;
-    font-weight: 700;
     font-style: italic;
     text-align: center;
 }
@@ -24,8 +23,7 @@ h2 {
     font-size: 24px;
     font-weight: 700;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-left: 25px;
-    margin-right: 25px;
+    margin: 0px 25px;
 }
 
 p {
