--- a/CodingSchool/CSS/LearnWithLeon&Friends.css
+++ b/CodingSchool/CSS/LearnWithLeon&Friends.css
@@ -4,9 +4,8 @@
     max-width: 800px;
     background-color: rgb(2, 154, 255);
     border: green 5px solid;
-    margin: 0 auto;
+    margin: 10% auto;
     padding: 25px;
-    margin-top: 25px;
 }
 
 /* Typography */
