--- a/MusicSite/HTML/styles.css
+++ b/MusicSite/HTML/styles.css
@@ -52,6 +52,12 @@ h2 {
     letter-spacing: 3px;
 }
 
+p {
+    font-size: 20px;
+    color: rgba(5, 12, 43, 0.459);
+    padding-left: 20px;
+}
+
 a {
     font-size: 30px;
     text-decoration: none;
@@ -125,6 +131,29 @@ footer {
     display: flex;
     align-items: center;
     padding-inline-end: 20px;
+}
+
+.dissect {
+    display: flex;
+    align-items: left;
+    flex-flow: column;
+    justify-content: space-evenly;
+}
+
+.dissecttrackname{
+    font-size: 28px;
+    color: rgba(0, 0, 0, 0.459);
+    font-weight: 600;
+    letter-spacing: 3px;
+    padding-left: 20px;
+    padding-top: 50px;
+}
+
+.dissectitems {
+    display: flex;
+    flex: 1;
+    padding: 30px;
+    border: black 1px;
 }
 
 .title {
