Fixed Syntax Error

--- a/MusicSite/HTML/styles.css
+++ b/MusicSite/HTML/styles.css
@@ -1,5 +1,3 @@
-/* Box Model Hack */
-
 * {
     box-sizing: border-box;
 }
@@ -31,8 +29,7 @@
 }
 
 body {
-    font-family: 'Bebas Neue', cursive;
-    Arial;
+    font-family: 'Bebas Neue', cursive, Arial;
     background-color: rgba(106, 196, 181, 0.196);
     margin: 0%;
     max-width: 0 auto;
