--- a/MusicSite/HTML/styles.css
+++ b/MusicSite/HTML/styles.css
@@ -127,14 +127,12 @@ footer {
 .releaseitems {
     display: flex;
     align-items: center;
-    padding-inline-end: 20px;
 }
 
 .dissect {
     display: flex;
-    align-items: left;
-    flex-flow: column;
-    justify-content: space-evenly;
+    justify-content: center;
+
 }
 
 .dissecttrackname{
@@ -142,15 +140,15 @@ footer {
     color: rgba(0, 0, 0, 0.459);
     font-weight: 600;
     letter-spacing: 3px;
-    padding-left: 20px;
-    padding-top: 50px;
+    padding: 50px 0;
+    text-align: left;
 }
 
 .dissectitems {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     flex: 1;
-    padding: 30px;
-    border: black 1px;
 }
 
 .title {
