Added image library for FF Project

--- a/FinalFantasy/css/style.css
+++ b/FinalFantasy/css/style.css
@@ -33,10 +33,13 @@ ul {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+    flex: 1 1 auto;
 }
 
-li {
-    border: black 1px solid;
+ul img{
+    width: auto;
 }
 
 
