--- a/FinalFantasy/css/style.css
+++ b/FinalFantasy/css/style.css
@@ -14,6 +14,10 @@
 /* LAYOUT
 /*******************************************/
 
+html {
+    height: auto;
+}
+
 h1,
 h2 {
     text-align: center;
@@ -39,7 +43,8 @@ ul {
 }
 
 ul img{
-    width: auto;
+    width: 300px;
+    height: auto;
 }
 
 
@@ -50,8 +55,8 @@ ul img{
 .headerimg {
     display: flex;
     justify-content: center;
-    background-color: gray;
-    border-radius: 15px;
+    width: 400px;
+    height: auto;
 }
 
 #FF1 {
