--- a/DevResources/template/css/reset.css
+++ b/DevResources/template/css/reset.css
@@ -45,3 +45,25 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+header{
+	height: 200px;
+	border: 1px black solid;
+}
+
+section{
+	width: 33.3333%;
+	height: 300px;
+	float: left;
+	border: 1px solid black;
+}
+
+.half{
+	width: 50%;
+}
+
+footer{
+	height: 200px;
+	border: 1px solid black;
+	clear: both;
+}
