--- a/DevResources/template/index.html
+++ b/DevResources/template/index.html
@@ -9,12 +9,22 @@
 
     <title>Blank Template</title>
 
-    <!-- external CSS link -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <header></header>
+       <main>
+           <section class="third"></section>
+            <section class="third"></section>
+            <section class="third"></section>
+        </main>
+        <section class="bottom">
+        <section></section>
+        <section></section>
+        </section>
+    <footer></footer>
 
     <script type="text/javascript" src="js/main.js"></script>
 </body>
