--- a/Ramsey Layouts/Ramsey Coaching/styles.css
+++ b/Ramsey Layouts/Ramsey Coaching/styles.css
@@ -1,23 +1,75 @@
 body {
     margin: 0 auto;
-    max-width: 70%;
 }
 
 .header {
-    height: 200px;
-    background-color: white;
-    border: black 1px solid;
+    background-color: #fff;
+    margin: 0 auto;
+    display: block;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+.upperHeader {
+    background-color: #fff;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
 }
 
 .mainNav {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: left;
+    justify-content: space-between;
+    padding-left: 0%;
+    width: 70%;
+    padding-right: 10%;
 }
 
 .mainNav li {
-    border: black solid 1px;
     text-align: center;
+    list-style: none;
+    color: #0073b9;
+    font-family: "Roboto", sans-serif;
+}
+
+.body{
+    background-color: #0073b9;
+    color: #fff;
+    padding: 0 10%;
+    padding-bottom: 5%;
+}
+
+.logo{
+    width: 300px;
+    padding-top: 10%;
+}
+
+h1{
+    font-weight:600;
+    font-family: "Roboto", sans-serif;
+    font-size: 60px;
+    width: 50%;
+}
+
+h2{
+    font-weight:600;
+    font-size: 24px;
+    width: 50%;
+    font-family: "Roboto", sans-serif;
+}
+
+.whitebluebtn{
+    border-radius: 4px;
+    border: #fff, solid 2px;
+    background-color: #fff;
+    color: #0073b9;
+    font-weight:600;
+    font-family: "Roboto", sans-serif;
+    padding: 10px 24px;
+    line-height: 32px;
+    font-size: 18px;
+    text-decoration: none;
 }
 
 .masthead {
