--- a/Ramsey Layouts/Ramsey Coaching/styles.css
+++ b/Ramsey Layouts/Ramsey Coaching/styles.css
@@ -14,6 +14,8 @@ body {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    padding-bottom: 20px;
+    border-bottom: lightgray solid 1px;
 }
 
 .mainNav {
@@ -34,6 +36,8 @@ body {
 }
 
 .body{
+    background-image: url("https://cdn.ramseysolutions.net/media/ramsey-plus/coaching/magnolia/header/03-mar/hero-lap-wide.png");
+    background-size: contain;
     background-color: #0073b9;
     color: #fff;
     padding: 0 10%;
@@ -42,7 +46,16 @@ body {
 
 .logo{
     width: 300px;
-    padding-top: 10%;
+    padding-top: 5%;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+    text-decoration-color: #0073b9;
 }
 
 h1{
@@ -57,6 +70,20 @@ h2{
     font-size: 24px;
     width: 50%;
     font-family: "Roboto", sans-serif;
+}
+
+input[type=text]{
+    width: 20%;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: white;
+  background-image: url('https://cdn-icons-png.flaticon.com/512/61/61088.png');
+  background-size: 20px;
+  background-position: 90% 50%; 
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 20px;
 }
 
 .whitebluebtn{
